# ResearchPath

./: .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: schema.py
backend/app/ml/: evaluation.py
backend/app/models/: __init__.py  citation_edge.py  feedback.py  paper.py  paper_identifier.py  paper_source.py  saved_library_item.py  user_profile.py
backend/tests/: test_api.py  test_biencoder_dataset.py  test_bm25.py  test_dataset_manifest.py  test_dataset_status_api.py  test_deduplication.py  test_difficulty.py  test_embedding_retriever.py  test_evaluate_reranker.py  test_evaluation.py  test_faiss_retriever.py  test_feedback_profile_api.py  test_formatting.py  test_hybrid_ranking.py  test_ingestion.py  test_library_api.py  test_lightweight_ranker.py  test_manual_label_workflow.py  test_milestone2_evaluation_runner.py  test_milestone2_ingestion.py  test_milestone2_retrievers.py  test_milestone2_schema.py  test_openalex_dataset_pipeline.py  test_openalex_expansion.py  test_openalex_fetcher.py  test_product_recommendations.py  test_reading_path.py  test_reading_path_api.py  test_reading_path_evaluation.py  test_reading_path_scoring.py  test_recommendation_methods.py  test_reranker_dataset.py  test_train_biencoder.py  test_train_cross_encoder.py  test_v2_1_benchmark.py  test_v2_7_learned_blend.py  test_v2_9_ltr_dataset.py  test_v3_0_ltr_training.py  test_v3_1_ltr_error_analysis.py  test_v3_3_ltr_dataset_800.py  (+46 more)
(+150 files in other folders)
