[project]
name = "researchpath-backend"
version = "0.1.0"
description = "FastAPI backend for ResearchPath paper recommendations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.0",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.4",
  "python-multipart>=0.0.9"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]
ml = [
  "accelerate>=1.1.0",
  "datasets>=2.19.0",
  "sentence-transformers>=3.0.0"
]
faiss = [
  "faiss-cpu>=1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
